examples/Python/qasm_examples/syntax_errors/e66.qasm
qreg q[5];
U (0.1,0.2, 0.3);
U (0.1,0.2, 0.3) q;
